==> apache/nuttx/arch/arm/src/lpc11xx/lpc11_i2c.c <==
#include <nuttx/config.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdbool.h>
#include <stdlib.h>
#include <string.h>
#include <errno.h>
#include <debug.h>
#include <nuttx/arch.h>
#include <nuttx/wdog.h>
#include <nuttx/semaphore.h>
#include <nuttx/i2c/i2c_master.h>
#include <nuttx/irq.h>
#include <arch/board/board.h>
#include "chip.h"
#include "up_arch.h"
#include "up_internal.h"
#include "chip.h"
#include "chip/lpc11_syscon.h"
#include "lpc11_gpio.h"
#include "lpc11_i2c.h"
#  define GPIO_I2C1_SCL GPIO_I2C1_SCL_1
#  define GPIO_I2C1_SDA GPIO_I2C1_SDA_1
#  define CONFIG_LPC11_I2C0_FREQUENCY 100000
#  define CONFIG_LPC11_I2C1_FREQUENCY 100000
#  define CONFIG_LPC11_I2C2_FREQUENCY 100000
#define I2C_TIMEOUT  (20 * 1000/CONFIG_USEC_PER_TICK) /* 20 mS */
#define LPC11_I2C1_FREQUENCY 400000

static int lpc11_i2c_start(struct lpc11_i2cdev_s *priv)
{
  putreg32(I2C_CONCLR_STAC | I2C_CONCLR_SIC,
           priv->base + LPC11_I2C_CONCLR_OFFSET);
  putreg32(I2C_CONSET_STA, priv->base + LPC11_I2C_CONSET_OFFSET);

  (void)wd_start(priv->timeout, I2C_TIMEOUT, lpc11_i2c_timeout, 1,
                 (uint32_t)priv);
  nxsem_wait(&priv->wait);

  wd_cancel(priv->timeout);

  return priv->nmsg;
}

static void lpc11_i2c_stop(struct lpc11_i2cdev_s *priv)
{
  if (priv->state != 0x38)
    {
      putreg32(I2C_CONSET_STO | I2C_CONSET_AA,
               priv->base + LPC11_I2C_CONSET_OFFSET);
    }

  nxsem_post(&priv->wait);
}

static int lpc11_i2c_transfer(FAR struct i2c_master_s *dev,
                              FAR struct i2c_msg_s *msgs, int count)
{
  struct lpc11_i2cdev_s *priv = (struct lpc11_i2cdev_s *)dev;
  int ret;

  DEBUGASSERT(dev != NULL && msgs != NULL && count > 0);

  /* Get exclusive access to the I2C bus */

  nxsem_wait(&priv->mutex);

  /* Set up for the transfer */

  priv->wrcnt = 0;
  priv->rdcnt = 0;
  priv->msgs  = msgs;
  priv->nmsg  = count;

  /* Configure the I2C frequency.
   * REVISIT: Note that the frequency is set only on the first message.
   * This could be extended to support different transfer frequencies for
   * each message segment.
   */

  lpc11_i2c_setfrequency(priv, msgs->frequency);

  /* Perform the transfer */

  ret = lpc11_i2c_start(priv);

  nxsem_post(&priv->mutex);
  return ret;
}

struct i2c_master_s *lpc11_i2cbus_initialize(int port)
{
  struct lpc11_i2cdev_s *priv;

  if (port > 1)
    {
      i2cerr("ERROR: LPC I2C only supports ports 0 and 1\n");
      return NULL;
    }

  irqstate_t flags;
  uint32_t regval;

  flags = enter_critical_section();

#ifdef CONFIG_LPC11_I2C0
  if (port == 0)
    {
      priv        = &g_i2c0dev;
      priv->base  = LPC11_I2C0_BASE;
      priv->irqid = LPC11_IRQ_I2C0;

      /* Enable clocking */

      regval  = getreg32(LPC11_SYSCON_SYSAHBCLKCTRL);
      regval |= SYSCON_SYSAHBCLKCTRL_I2C0;
      putreg32(regval, LPC11_SYSCON_SYSAHBCLKCTRL);

      /* Pin configuration */

      lpc11_configgpio(GPIO_I2C0_SCL);
      lpc11_configgpio(GPIO_I2C0_SDA);

      /* Set default frequency */

      lpc11_i2c_setfrequency(priv, CONFIG_LPC11_I2C0_FREQUENCY);
    }
  else
#endif
#ifdef CONFIG_LPC11_I2C1
  if (port == 1)
    {
      priv        = &g_i2c1dev;
      priv->base  = LPC11_I2C1_BASE;
      priv->irqid = LPC11_IRQ_I2C1;

      /* Enable clocking */

      regval  = getreg32(LPC11_SYSCON_SYSAHBCLKCTRL);
      regval |= SYSCON_SYSAHBCLKCTRL_I2C1;
      putreg32(regval, LPC11_SYSCON_SYSAHBCLKCTRL);

      regval  = getreg32(LPC11_SYSCON_PCLKSEL1);
      regval &= ~SYSCON_PCLKSEL1_I2C1_MASK;
      regval |= (SYSCON_PCLKSEL_CCLK << SYSCON_PCLKSEL1_I2C1_SHIFT);
      putreg32(regval, LPC11_SYSCON_PCLKSEL1);

      /* Pin configuration */

      lpc11_configgpio(GPIO_I2C1_SCL);
      lpc11_configgpio(GPIO_I2C1_SDA);

      /* Set default frequency */

      lpc11_i2c_setfrequency(priv, CONFIG_LPC11_I2C1_FREQUENCY);
    }
  else
#endif
#ifdef CONFIG_LPC11_I2C2
  if (port == 2)
    {
      priv        = &g_i2c2dev;
      priv->base  = LPC11_I2C2_BASE;
      priv->irqid = LPC11_IRQ_I2C2;

      /* Enable clocking */

      regval  = getreg32(LPC11_SYSCON_SYSAHBCLKCTRL);
      regval |= SYSCON_SYSAHBCLKCTRL_I2C2;
      putreg32(regval, LPC11_SYSCON_SYSAHBCLKCTRL);

      regval  = getreg32(LPC11_SYSCON_PCLKSEL1);
      regval &= ~SYSCON_PCLKSEL1_I2C2_MASK;
      regval |= (SYSCON_PCLKSEL_CCLK << SYSCON_PCLKSEL1_I2C2_SHIFT);
      putreg32(regval, LPC11_SYSCON_PCLKSEL1);

      /* Pin configuration */

      lpc11_configgpio(GPIO_I2C2_SCL);
      lpc11_configgpio(GPIO_I2C2_SDA);

      /* Set default frequency */

      lpc11_i2c_setfrequency(priv, CONFIG_LPC11_I2C2_FREQUENCY);
    }
  else
#endif
    {
      return NULL;
    }

  leave_critical_section(flags);

  putreg32(I2C_CONSET_I2EN, priv->base + LPC11_I2C_CONSET_OFFSET);

  /* Initialize semaphores */

  nxsem_init(&priv->mutex, 0, 1);
  nxsem_init(&priv->wait, 0, 0);

  /* The wait semaphore is used for signaling and, hence, should not have
   * priority inheritance enabled.
   */

  nxsem_setprotocol(&priv->wait, SEM_PRIO_NONE);

  /* Allocate a watchdog timer */

  priv->timeout = wd_create();
  DEBUGASSERT(priv->timeout != 0);

  /* Attach Interrupt Handler */

  irq_attach(priv->irqid, lpc11_i2c_interrupt, priv);

  /* Enable Interrupt Handler */

  up_enable_irq(priv->irqid);

  /* Install our operations */

  priv->dev.ops = &lpc11_i2c_ops;
  return &priv->dev;
}

int lpc11_i2cbus_uninitialize(FAR struct i2c_master_s * dev)
{
  struct lpc11_i2cdev_s *priv = (struct lpc11_i2cdev_s *) dev;

  /* Disable I2C */

  putreg32(I2C_CONCLRT_I2ENC, priv->base + LPC11_I2C_CONCLR_OFFSET);

  /* Reset data structures */

  nxsem_destroy(&priv->mutex);
  nxsem_destroy(&priv->wait);

  /* Free the watchdog timer */

  wd_delete(priv->timeout);
  priv->timeout = NULL;

  /* Disable interrupts */

  up_disable_irq(priv->irqid);

  /* Detach Interrupt Handler */

  irq_detach(priv->irqid);
  return OK;
}
