==> apache/nuttx/arch/arm/src/xmc4/xmc4_i2c.c <==
#include <nuttx/config.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdio.h>
#include <assert.h>
#include <errno.h>
#include <debug.h>
#include <arch/board/board.h>
#include <nuttx/mutex.h>
#include <nuttx/irq.h>
#include "arm_internal.h"
#include "chip.h"
#include "hardware/xmc4_pinmux.h"
#include "hardware/xmc4_memorymap.h"
#include "hardware/xmc4_usic.h"
#include "xmc4_i2c.h"
#include "xmc4_usic.h"
#include "xmc4_gpio.h"
#define XMC_I2C_CLOCK_OVERSAMPLING_STANDARD (10U)
#define XMC_I2C_CLOCK_OVERSAMPLING_FAST (25U)
#define XMC_I2C_MAX_SPEED_STANDARD 100000UL
#define XMC_I2C_MAX_SPEED_FAST 400000
#define I2C_DEFAULT_FREQUENCY 400000
#define I2C_INPUT_DX_SDA (0U) /* I2C uses DX0 input stage as SDA */
#define I2C_INPUT_DX_SCL (1U) /* I2C uses DX1 input stage as SCL */
#define XMC_I2C_TDF_MASTER_SEND (0U)
#define XMC_I2C_TDF_SLAVE_SEND (1U << 8)
#define XMC_I2C_TDF_MASTER_RECEIVE_ACK (2U << 8)
#define XMC_I2C_TDF_MASTER_RECEIVE_NACK (3U << 8)
#define XMC_I2C_TDF_MASTER_START (4U << 8)
#define XMC_I2C_TDF_MASTER_RESTART (5U << 8)
#define XMC_I2C_TDF_MASTER_STOP (6U << 8)
#define XMC_I2C_CMD_WRITE (0U)
#define XMC_I2C_CMD_READ (1U)
#define I2C_WORDLENGTH (7U) /* 8 bits word length */
#define I2C_TRM_MODE (3U)   /* Shift and transfert config */
#define I2C_TDV_SET (1U) /* A transmission of data in TBUF \
                          * can be started if TDV = 1 */

static void i2c_start(struct xmc4_i2cdev_s *priv,
               const uint16_t addr,
               const bool read,
               const bool restart)
{
  uint32_t sent_data = (addr << 1);

  /* Add start transition */

  if (restart)
    {
      sent_data |= XMC_I2C_TDF_MASTER_RESTART;
    }
  else
    {
      sent_data |= XMC_I2C_TDF_MASTER_START;
    }

  if (read)
    {
      sent_data |= 0x01;
    }

  i2c_fill_transmit_buffer(priv, sent_data);
}

static void i2c_stop(struct xmc4_i2cdev_s *priv)
{
  uint32_t buff_data = (uint32_t)XMC_I2C_TDF_MASTER_STOP;
  i2c_fill_transmit_buffer(priv, buff_data);
}

static int i2c_transfer(struct i2c_master_s *dev,
                        struct i2c_msg_s *msgs,
                        int count)
{
  struct xmc4_i2cdev_s *priv = (struct xmc4_i2cdev_s *)dev;

  int ret = OK;

  bool previous_msg_no_stop = false;

  /* Get exclusive access to the I2C bus */

  nxmutex_lock(&priv->lock);

  /* Enter critical section to avoid interrupts during i2c transfert */

  irqstate_t state = enter_critical_section();

  for (int i = 0; i < count; i++)
    {
      /* Check if frequency must be changed */

      if (msgs[i].frequency != priv->frequency)
        {
          priv->frequency = msgs[i].frequency;

          if (!previous_msg_no_stop)
            {
              i2c_stop_channel(priv);

              i2c_set_baudrate(priv);

              i2c_start_channel(priv);
            }
          else
            {
              i2cerr("Can't update frequency between Start & Stop symbols\n");
              leave_critical_section(state);
              nxmutex_unlock(&priv->lock);
              return -EINVAL;
            }
        }

      /* R/W bit */

      bool read = ((msgs[i].flags & I2C_M_READ) != 0);

      /* Check if you should start or restart a new i2c frame */

      if ((msgs[i].flags & I2C_M_NOSTART) == 0)
        {
          if (previous_msg_no_stop)
            {
              /* Repeated start */

              i2c_start(priv, msgs[i].addr, read, true);
              i2c_wait_for_slave_ack(priv);
            }
          else
            {
              /*  Normal start */

              i2c_start(priv, msgs[i].addr, read, false);
              i2c_wait_for_slave_ack(priv);
            }
        }

      /* Parse buffer data */

      for (int j = 0; j < (msgs[i].length); j++)
        {
          if (read)
            {
              /* Answer ack (or nack if last buffer) */

              if (j == ((msgs[i].length) - 1))
                {
                  i2c_master_nack(priv);
                }
              else
                {
                  i2c_master_ack(priv);
                }

              i2c_wait_for_received_data_ready(priv);

              /* Save received data */

              msgs[i].buffer[j] = i2c_get_receive_buffer(priv);
            }
          else
            {
              i2c_master_transmit(priv, msgs[i].buffer[j]);
              i2c_wait_for_slave_ack(priv);
            }
        }

      /* Check if you should not stop the i2c frame
      * msg has NO_STOP or next msg has NO_START flag
      */

      bool message_has_no_stop = ((msgs[i].flags & I2C_M_NOSTOP) != 0);

      bool next_message_has_no_start = false;

      if (i < count)
        {
          next_message_has_no_start =
                                ((msgs[i + 1].flags & I2C_M_NOSTART) != 0);
        }

      bool should_stop = !(message_has_no_stop || next_message_has_no_start);

      /* TODO : Should you stop when last msg and overide flags ? */

      if (should_stop)
        {
          i2c_stop(priv);
        }
      else
        {
          previous_msg_no_stop = true;
        }
    }

  leave_critical_section(state);
  nxmutex_unlock(&priv->lock);
  return ret;
}

struct i2c_master_s *xmc4_i2cbus_initialize(int port)
{
  struct xmc4_i2cdev_s *priv = NULL;

  switch (port)
    {
#ifdef CONFIG_XMC4_I2C0
      case 0:
      {
        priv = (struct xmc4_i2cdev_s *)&g_i2c0;
        break;
      }
#endif

#ifdef CONFIG_XMC4_I2C1
      case 1:
      {
        priv = (struct xmc4_i2cdev_s *)&g_i2c1;
        break;
      }
#endif

#ifdef CONFIG_XMC4_I2C2
      case 2:
      {
        priv = (struct xmc4_i2cdev_s *)&g_i2c2;
        break;
      }
#endif

#ifdef CONFIG_XMC4_I2C3
      case 3:
      {
        priv = (struct xmc4_i2cdev_s *)&g_i2c3;
        break;
      }
#endif

#ifdef CONFIG_XMC4_I2C4
      case 4:
      {
        priv = (struct xmc4_i2cdev_s *)&g_i2c4;
        break;
      }
#endif

#ifdef CONFIG_XMC4_I2C5
      case 5:
      {
        priv = (struct xmc4_i2cdev_s *)&g_i2c5;
        break;
      }
#endif

      default:
      {
        i2cerr("No such i2c module.\n");
        return NULL;
      }
    }

  nxmutex_lock(&priv->lock);

  if (priv->refs++ == 0)
    {
      int ret = i2c_initialize(priv);
      if (ret < 0)
        {
          nxmutex_unlock(&priv->lock);
          return NULL;
        }
    }

  nxmutex_unlock(&priv->lock);

  return (struct i2c_master_s *)priv;
}

int xmc4_i2cbus_uninitialize(struct i2c_master_s *dev)
{
  struct xmc4_i2cdev_s *priv = (struct xmc4_i2cdev_s *)dev;

  if (priv->refs == 0)
    {
      return ERROR;
    }

  nxmutex_lock(&priv->lock);

  if (--priv->refs)
    {
      nxmutex_unlock(&priv->lock);
      kmm_free(dev);
      return OK;
    }

  i2c_uninitialize(priv);

  nxmutex_unlock(&priv->lock);

  kmm_free(dev);

  return OK;
}
